--- a/front/index.html
+++ b/front/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Научный Поисковик - Шаблон Фронтенда</title>
+    <title>Lucky Search</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>🔍 Научный Поисковик (Шаблон Фронтенда)</h1>
+        <h1>Lucky Search</h1>
 
         <div class="search-area">
             <h2>1. Основной Поиск</h2>
@@ -101,7 +101,7 @@
         <hr />
 
         <div id="analysis-area">
-            <h2>3. 📊 Анализ DOI</h2>
+            <h2>Анализ DOI</h2>
             <form id="analysis-form">
                 <div id="analysis-form-content">
                     <input type="text" id="analysis-input" placeholder="Введите один или несколько DOI для анализа, разделенных запятой (напр., 10.1000/j.a.b, 10.2000/x.y.z)" required>
