edit css & html file

--- a/front/index.html
+++ b/front/index.html
@@ -22,12 +22,12 @@
             <div class="filters-grid">
                 <div class="filter-group">
                     <label for="filter-authors">Авторы (ФИО)</label>
-                    <input type="text" id="filter-authors" placeholder="Напр. Smith J., Ivanov P.">
+                    <input type="text" id="filter-authors">
                 </div>
 
                 <div class="filter-group">
                     <label for="filter-journal">Журнал / ISSN</label>
-                    <input type="text" id="filter-journal" placeholder="Напр. Nature, 0028-0836">
+                    <input type="text" id="filter-journal">
                 </div>
 
                 <div class="filter-group">
@@ -38,8 +38,8 @@
                 <div class="filter-group">
                     <label>Диапазон годов</label>
                     <div class="year-range-group">
-                        <input type="number" id="filter-year-from" placeholder="С года (Напр. 2020)">
-                        <input type="number" id="filter-year-to" placeholder="По год (Напр. 2024)">
+                        <input type="number" id="filter-year-from" placeholder="С года">
+                        <input type="number" id="filter-year-to" placeholder="По год">
                     </div>
                 </div>
 
