Fix table result. Add switch theme

--- a/front/index.html
+++ b/front/index.html
@@ -14,6 +14,9 @@
     <div class="container">
         <header>
             <h1>Lucky Search</h1>
+            <div class="theme-switcher">
+                <button id="theme-toggle" class="theme-toggle">Тёмная тема</button>
+            </div>
             <p class="subtitle">Поиск научных публикаций</p>
         </header>
 
