edit theme switch button

--- a/front/index.html
+++ b/front/index.html
@@ -15,7 +15,10 @@
         <header>
             <h1>Lucky Search</h1>
             <div class="theme-switcher">
-                <button id="theme-toggle" class="theme-toggle">Тёмная тема</button>
+                <button id="theme-toggle" class="theme-toggle">
+                    <img id="theme-icon" src="/static/free-icon-sun-3682916.png" alt="Тема" class="theme-icon">
+                    <span id="theme-text">Тёмная тема</span>
+                </button>
             </div>
             <p class="subtitle">Поиск научных публикаций</p>
         </header>
